// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniParcColumnConfiguration component should render column "busco": busco 1`] = `
<DocumentFragment>
  <protvista-track
    height="10"
    length="100"
  />
  <div>
    n:103 · lineageDb value
  </div>
  <div>
    C:77.7% (S:7.8% D:11.7%) F:17.5% M:19.4%
  </div>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "cpd": cpd 1`] = `
<DocumentFragment>
  Standard
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "genome_assembly": genome_assembly 1`] = `
<DocumentFragment>
  id value
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "genome_representation": genome_representation 1`] = `
<DocumentFragment>
  full
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "lineage": lineage 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    Homo sapiens
  </a>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "mnemonic": mnemonic 1`] = `
<DocumentFragment>
  HUMAN
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  Homo sapiens
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606
  </a>
</DocumentFragment>
`;

exports[`UniParcColumnConfiguration component should render column "upid": upid 1`] = `
<DocumentFragment>
  <a
    href="/proteome/UP000005640"
  >
    UP000005640
  </a>
</DocumentFragment>
`;
